--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    Nukam Karthik
+    <!-- block level elements -->
+     <div>Karthik</div>
+     <div>karthik1</div>
+     <!-- Inline elements -->
+      <span>mudiraj</span>
+      <span>nukam</span>
 </body>
 </html>
