--- a/blocklevelelements.html
+++ b/blocklevelelements.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <li>hii</li>
-    <li>hello karthik</li>
-    <a>gggg</a>
+    <!-- inlineelements -->
+     <small>i learned inline</small>
+     <map>elements</map>
+     <kbd>with</kbd>
+     <dfn>vs code</dfn>
 </body>
 </html>
