--- a/Inline elements.html
+++ b/Inline elements.html
@@ -9,7 +9,8 @@
     <!-- inlineelements -->
      <small>i learned inline</small>
      <map>elements</map>
-     <kbd>with</kbd>
+     <kbd>practiced on</kbd>
      <dfn>vs code</dfn>
+     <label>mete data</label>
 </body>
 </html>
