--- a/basichtmltags.html
+++ b/basichtmltags.html
@@ -15,11 +15,28 @@
      <h6>heading 6</h6>
      <!-- paragaraph tags -->
       <p>kjhcchgcgc</p>
+      <hr>
+      <p>ggsdcgcdck agcgghchcih  &nbsp;     wehfiuwehwhefihw &nbsp;  khiwhiwh   &nbsp;  jkefhiwrfh</p>
+
       <!-- preserve formating tag -->
       <pre>jahffhjf     wjhhh  kwjbfhwfwh  wkjbh</pre>
       <br>
       <center>jhjghg</center>
-      <hr>
-
+      <!-- horizontal tag -->
+       <hr>
+       <!-- list in html -->
+        <ul>
+            <li> jhcgcshgqsugcq</li>
+            <li>hbdjghhgb</li>
+            <li>jhfghhcjdbc</li>
+            <li>jghjwgjhdjc</li>
+        </ul>
+<!-- ordered list -->
+          <ol type = "I">
+            <li>hfgshjgdg</li>
+            <li>karthik</li>
+            <li>thsrun</li>
+            <li>shyam</li>
+          </ol>
 </body>
 </html>
